Fix about on mobile.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -98,7 +98,7 @@ html {
     }
     &__paragraph {
         font-family: $font-text;
-        font-size: 1.75;
+        font-size: 1.75rem;
         color: $color-nero;
     }
 }
